Link controller support editor ui to backend
